SBT recompilation performance tests